Add a rule resource and a resource loader built into the configuration panel

--- a/src/main/java/bandit/BanditConfigurationPanel.form
+++ b/src/main/java/bandit/BanditConfigurationPanel.form
@@ -85,7 +85,9 @@
         <children>
           <component id="155ae" class="com.intellij.ui.components.JBList" binding="ruleList">
             <constraints/>
-            <properties/>
+            <properties>
+              <model />
+            </properties>
           </component>
         </children>
       </scrollpane>
