Change the words in the settings form

--- a/src/main/java/security/settings/SecuritySettingsPane.form
+++ b/src/main/java/security/settings/SecuritySettingsPane.form
@@ -91,7 +91,7 @@
           <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Use GitHub/Other URL"/>
+          <text value="Use SafetyDB from GitHub URL"/>
         </properties>
       </component>
       <grid id="b1dbb" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -129,7 +129,7 @@
         </constraints>
         <properties>
           <font style="1"/>
-          <text value="SafetyDB Mode"/>
+          <text value="Package Inspection Mode"/>
         </properties>
       </component>
       <component id="7336e" class="javax.swing.JLabel">
