Use new pyup API

--- a/src/main/java/security/settings/SecuritySettingsPane.form
+++ b/src/main/java/security/settings/SecuritySettingsPane.form
@@ -27,7 +27,7 @@
         </constraints>
         <properties>
           <selected value="true"/>
-          <text value="Use SafetyDB (non-commercial projects only)"/>
+          <text value="Use SafetyDB"/>
         </properties>
       </component>
       <component id="beb14" class="javax.swing.JRadioButton" binding="pyupApiRadioButton" custom-create="true">
